# sql-fhir-library-builder

./: .gitignore  .gitignore-README.md  CI_CD.md  CODE_STYLE.md  MANIFEST.in  Makefile  README.md  TESTING.md  debug_annotations.py  debug_mixed.py  pyproject.toml  requirements.txt  setup.py  test_param_parsing.py  test_parameters.py  test_py38_compat.py  verify_params.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  demo.yml  publish.yml  quality.yml  test.yml
examples/: clinical_decision_support.sql  edge_case_dialect.sql  hive_example.sql  hive_with_version.sql  postgres_example.sql  postgres_with_version.sql  reporting_queries.sql  spark_example.sql  sql_on_fhir_example.sql  users_schema.sql
scripts/: demo.py  quick_test.py  run_all_tests.py  validate_workflows.py
src/sql_fhir_library_generator/: __init__.py  fhir_builder.py  parser.py
tests/: __init__.py  test_commands.py  test_dialect_version.py  test_empty_properties.py  test_fhir_integration.py  test_multiple_dependencies.py  test_name_generation.py  test_param_parsing.py  test_parameters.py  test_parameters_development.py  test_parser.py  test_py38_compat.py  test_sql_dialect.py
